@@ -4,6 +4,7 @@ import { KeyIcon, MailIcon, PaletteIcon, PlusSquareIcon, SettingsIcon } from 'lu
 import Link from 'next/link';
 import { usePathname } from 'next/navigation'
 import React from 'react'
+import { useNavBarContext } from '../nav-bar-context';
 
 type DashboardSidebarAppLinksProps = {
   appId: string
@@ -43,14 +44,20 @@ const DashboardSidebarAppLinks = ({ appId }: DashboardSidebarAppLinksProps) => {
 
   const pathname = usePathname()
 
+  const { setNavOpen } = useNavBarContext()
+
   return (
     <div className='w-full flex flex-col gap-[16px]'>
       {links.map((link, idx) => (
-        <Link key={idx} href={link.to} className={clsx(
-          'flex gap-[8px] items-center p-[8px] link-btn rounded',
-          { 'bg-primary-foreground text-primary': link.to == pathname },
-          { 'hover:bg-secondary/20': link.to != pathname }
-        )}>
+        <Link
+          onClick={() => setNavOpen(false)}
+          key={idx}
+          href={link.to}
+          className={clsx(
+            'flex gap-[8px] items-center p-[8px] link-btn rounded',
+            { 'bg-primary-foreground text-primary': link.to == pathname },
+            { 'hover:bg-secondary/20': link.to != pathname }
+          )}>
           <link.icon className='small' />
           <p className='text-xs'>{link.title}</p>
         </Link>
