@@ -5,6 +5,7 @@ import DashboardSidebarBottomCard from './dashboard-sidebar-bottom-card'
 import HeaderLogo from '../header-logo'
 import LinkButton from '../buttons/link-button'
 import { getAppById } from '@/app/actions/apps.actions'
+import { CloseSidebarButton } from '../nav-bar-context'
 
 type DashboardSidebarProps = {
   user?: typeof user.$inferSelect,
@@ -12,17 +13,20 @@ type DashboardSidebarProps = {
   appId?: string,
 }
 
-const DashboardSidebar = async ({ user, children , appId }: DashboardSidebarProps) => {
+const DashboardSidebar = async ({ user, children, appId }: DashboardSidebarProps) => {
 
   let app;
 
-  if(appId) app = await getAppById(appId)
+  if (appId) app = await getAppById(appId)
 
   return (
-    <section className='w-full md:w-[300px] bg-primary text-primary-foreground p-[16px] flex flex-col justify-between gap-[16px] h-full'>
+    <section className='w-screen md:w-[300px] bg-primary text-primary-foreground p-[16px] flex flex-col justify-between gap-[16px] h-full'>
 
       <div className='w-full flex flex-col gap-[32px]'>
-        <HeaderLogo className='text-inherit' title={app?.name}/>
+        <div className='w-full flex items-center justify-between'>
+          <HeaderLogo className='text-inherit' title={app?.name} backLink={appId ? '/dashboard' : undefined} />
+          <CloseSidebarButton />
+        </div>
 
         {
           !appId &&
