@@ -5,12 +5,13 @@ import Logo from './logo'
 
 type HeaderLogoProps = {
     title?: string,
-    className?: string
+    className?: string,
+    backLink?: string
 }
 
-const HeaderLogo = ({ className , title } : HeaderLogoProps) => {
+const HeaderLogo = ({ className , title , backLink } : HeaderLogoProps) => {
     return (
-        <Link href={'/'} className={`flex items-center gap-2 link-btn ${className}`}>
+        <Link href={backLink ?? '/'} className={`flex items-center gap-2 link-btn ${className}`}>
             <Logo className="size-[24px]"/>
             <h3>{title ?? "waitlyst"}</h3>
         </Link>
