@@ -2,6 +2,7 @@ import DashboardSidebarAppLinks from '@/app/_components/dashboard/dashboard-side
 import DashboardSidebar from '@/app/_components/dashboard/dashboard-sidebar'
 import { getCurrentUser } from '@/app/actions/user.actions'
 import React from 'react'
+import NavBarContextProvider, { NavBarWrapper } from '@/app/_components/nav-bar-context'
 
 
 async function AppLayout({ children, params }: {
@@ -14,12 +15,18 @@ async function AppLayout({ children, params }: {
     const user = await getCurrentUser()
 
     return (
-        <div className='flex flex-1 h-screen'>
-            <DashboardSidebar user={user as any} appId={appId}>
-                <DashboardSidebarAppLinks appId={appId}/>
-            </DashboardSidebar>
-            {children}
-        </div>
+        <NavBarContextProvider>
+            <div className='flex flex-1 w-full'>
+                <NavBarWrapper>
+                    <DashboardSidebar user={user as any} appId={appId}>
+                        <DashboardSidebarAppLinks appId={appId} />
+                    </DashboardSidebar>
+                </NavBarWrapper>
+                <div className='flex flex-1 h-screen md:w-screen'>
+                    {children}
+                </div>
+            </div>
+        </NavBarContextProvider>
     )
 }
 
