@@ -75,3 +75,9 @@ feat: add CopyButton component and integration code preview
 ### fix: Update pricing in plans and correct price type in PricingCard component
 
 ### fix: Update pricing for Starter and Pro plans in plans.ts and adjust currency display in PricingCard component
+
+## feat: Implement navigation bar context and enhance dashboard components with sidebar functionality
+
+fix: Update pricing in plans and correct price type in PricingCard component
+fix: Refactor signups and dashboard components to integrate sidebar functionality
+fix: Add usage and subscription management page with usage cards
